# datacenterlab

./: .ansible-lint  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CHECKPOINT-13-TEST-SUMMARY.md  LICENSE  README.md  TASK-1-SUMMARY.md  TASK-46-API-DOCUMENTATION.md  TASK-47-CHANGELOG-VERSIONING.md  analyze-link-utilization.py  check-metrics.sh  check-monitoring.sh  configure-openconfig-cli.sh  convert-to-ibgp.sh  deploy-monitoring.sh  deploy-multi-vendor.sh  destroy-monitoring.sh  destroy-multi-vendor.sh  generate-traffic.sh  lab  pyproject.toml  pytest.ini  requirements.txt  requirements.yml  ruff.toml  test-openconfig-implementation.sh  topology-monitoring.yml  topology-multi-vendor.yml  topology.yml  verify-network.sh
.github/: CI-CONFIGURATION.md  QUICK-START.md  README.md
.github/workflows/: ci.yml  lint-security.yml  test.yml
.hypothesis/constants/: 68226d0d1e3507e5
.kiro/steering/: containerlab-commands.md  openconfig-vendor-requirements.md  project-context.md
ansible/: DISPATCHER-PATTERN.md  DISPATCHER-QUICK-REFERENCE.md  EVPN-VXLAN-GUIDE.md  GNMI-SETUP.md  INDEX.md  METHODS.md  OS-DETECTION-GUIDE.md  QUICK-START-MULTI-METHOD.md  README.md  ROLES-README.md  STRUCTURE.md  TASK-6-IMPLEMENTATION.md  ansible.cfg  inventory-dynamic-test.yml  inventory-multi-vendor.yml  inventory.yml  requirements.yml  site-multi-vendor.yml  site.yml  test-dispatcher.yml  validation-report.json
ansible-collection/: README.md  galaxy.yml
ansible-collection/playbooks/: configure-bgp.yml  configure-evpn-arista.yml  configure-lldp.yml  site-multi-vendor.yml  site-openconfig.yml  site-srlinux-gnmi.yml  site.yml  validate-client-lldp.yml  validate-evpn-data-model.yml  validate-evpn.yml  verify-evpn-arista.yml  verify-gnmic.yml  verify.yml
ansible-collection/templates/: srlinux-config.j2
ansible/archive/: configure-gnmi.yml  configure-grpc-insecure.yml  configure-telemetry.yml  verify-all.yml  verify-bgp-detailed.yml  verify-connectivity.yml  verify-lldp.yml  verify-routing.yml  verify-simple.yml
ansible/filter_plugins/: interface_names.py
ansible/group_vars/: all.yml  juniper_devices.yml  leafs.yml  sonic_devices.yml  spines.yml
ansible/playbooks/: configure-evpn-arista.yml  configure-interfaces.yml  validate-bgp.yml  validate-evpn-data-model.yml  validate-interfaces.yml  validate-lldp.yml  validate.yml  verify-evpn-arista.yml  verify-gnmic.yml  verify.yml
ansible/templates/: evpn_vxlan_data_model.md  telemetry-config.j2
archive/: README.md  topology-simple.yml
configs/: frr-init.sh  sonic-init.sh
docs/: LINTING-SECURITY.md  MULTI-VENDOR-DEPLOYMENT.md  PRESENTATION-GUIDE.md  README.md  presentation.pptx
monitoring/: CURRENT-METRICS-REFERENCE.md  test-openconfig-telemetry.sh
scripts/: analyze-link-utilization.py  check-snapshot-version.py  deploy-monitoring.sh  deploy-multi-vendor.sh  deploy.sh  destroy-monitoring.sh  destroy-multi-vendor.sh  destroy.sh  detect-os.sh  enable-openconfig.sh  generate-presentation.py  generate-traffic.sh  install-dependencies.sh  lab  migrate-snapshots.py  remote-setup.sh  run-ci-tests.sh  run-linters.sh  show-openconfig-data.sh  test-openconfig-metrics.sh  test-openconfig-telemetry.sh  validate-lab.sh  validate-topology.py  version.py
terraform/: create-lab.sh  destroy-lab.sh  generate-env.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: README.md  test_os_detection.py
topologies/: topology-multi-vendor.yml  topology-sonic.yml  topology-srlinux.yml
traffic-testing/: README.md  ansible.cfg  inventory.yml
validation/: QUICK-START.md  README.md  TASK-17.1-IMPLEMENTATION.md  check_normalization.py  check_telemetry.py  check_universal_queries.py  test_check_normalization.py
(+358 files in other folders)
